// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`0000: load succeeds when first rule allows 1`] = `
"OK
--- (what actually happened) ---
[First returned] true"
`;

exports[`0010: load succeeds when any rule allows 1`] = `
"OK
--- (what actually happened) ---
[First returned] false
[Second returned] true"
`;

exports[`0020: load fails when first rule throws 1`] = `
"Failure
--- (error returned to client) ---
Error: wild
--- (what actually happened) ---
[First threw] Error: wild"
`;

exports[`0030: insert succeeds when all require allow 1`] = `
"OK
--- (what actually happened) ---
[First { id: '123', tenant_id: '42' } returned] true
[Second { id: '123', tenant_id: '42' } returned] true"
`;

exports[`0040: insert fails when any require denies 1`] = `
"Failure
--- (error returned to client) ---
EntNotInsertableError: table: cannot insert in vc:guest:master, because:
  Rule Require:First returned TOLERATE
  Rule Require:Second returned DENY
--- (what actually happened) ---
[First returned] true
[Second returned] false"
`;

exports[`0041: update fails when any require denies 1`] = `
"Failure
--- (error returned to client) ---
EntNotUpdatableError: table:123 is not updatable/deletable in vc:42, because:
  Rule Require:First returned TOLERATE
  Rule Require:Second returned DENY
--- (what actually happened) ---
[First returned] true
[Second returned] false"
`;

exports[`0042: delete fails when any require denies 1`] = `
"Failure
--- (error returned to client) ---
EntNotUpdatableError: table:123 is not updatable/deletable in vc:42, because:
  Rule Require:First returned TOLERATE
  Rule Require:Second returned DENY
--- (what actually happened) ---
[First returned] true
[Second returned] false"
`;

exports[`0043: update fails when user errors 1`] = `
"Failure
--- (error returned to client) ---
EntValidationError: table: tenant_id: "some one", tenant_id: "some two"
--- (what actually happened) ---
"
`;

exports[`0044: update succeeds user validation when field untouched 1`] = `
"OK
--- (what actually happened) ---
"
`;

exports[`0050: insert fails when any require throws 1`] = `
"Failure
--- (error returned to client) ---
Error: wild
--- (what actually happened) ---
[First returned] true
[Second threw] Error: wild"
`;

exports[`0060: load succeeds when any rule allows even if another rule throws EntNotReadableError 1`] = `
"OK
--- (what actually happened) ---
[First threw] EntNotReadableError: other_table:987 is not readable in vc:guest:master, because:
  ent access error
[Second returned] true"
`;

exports[`0070: load fails when any rule allows but another rule throws any wild exception 1`] = `
"Failure
--- (error returned to client) ---
Error: wild
--- (what actually happened) ---
[First threw] Error: wild"
`;

exports[`0080: validations fail when no rules defined 1`] = `
"Failure
--- (error returned to client) ---
EntNotReadableError: table:123 is not readable in vc:guest:master, because:
  No "load" rules defined
--- (what actually happened) ---
"
`;

exports[`0080: validations fail when no rules defined 2`] = `
"Failure
--- (error returned to client) ---
EntNotInsertableError: table: cannot insert in vc:guest:master, because:
  No "insert" rules defined
--- (what actually happened) ---
"
`;

exports[`0090: load fails with nice error message if only one rule 1`] = `
"Failure
--- (error returned to client) ---
Error: wild
--- (what actually happened) ---
[First threw] Error: wild"
`;

exports[`0090: load fails with nice error message if only one rule 2`] = `
"Failure
--- (error returned to client) ---
EntNotReadableError: table:123 is not readable in vc:guest:master, because:
  Rule AllowIf:First returned SKIP
--- (what actually happened) ---
[First threw] Error: wild
[First returned] false"
`;

exports[`0100: insert fails with nice error message if only one rule 1`] = `
"Failure
--- (error returned to client) ---
Error: wild
--- (what actually happened) ---
[First threw] Error: wild"
`;

exports[`0100: insert fails with nice error message if only one rule 2`] = `
"Failure
--- (error returned to client) ---
EntNotInsertableError: table: cannot insert in vc:guest:master, because:
  Rule Require:First returned DENY
--- (what actually happened) ---
[First threw] Error: wild
[First returned] false"
`;

exports[`0110: insert succeeds when DenyIf rule evaluates 1`] = `
"OK
--- (what actually happened) ---
[First returned] false"
`;

exports[`0120: load fails when DenyIf rule throws 1`] = `
"Failure
--- (error returned to client) ---
EntNotReadableError: table:123 is not readable in vc:guest:master, because:
  Rule DenyIf:First returned DENY, because:
    other_table:987 is not readable in vc:guest:master, because:
      ent access error
--- (what actually happened) ---
[First threw] EntNotReadableError: other_table:987 is not readable in vc:guest:master, because:
  ent access error"
`;

exports[`0130: fail when tenant user id mismatches 1`] = `
"Failure
--- (error returned to client) ---
EntNotReadableError: table:123 is not readable in vc:999, because:
  tenant_id is expected to be "999", but got "42"
--- (what actually happened) ---
"
`;

exports[`0130: fail when tenant user id mismatches 2`] = `
"Failure
--- (error returned to client) ---
EntNotInsertableError: table: cannot insert in vc:999, because:
  tenant_id is expected to be "999", but got "42"
--- (what actually happened) ---
"
`;

exports[`0130: fail when tenant user id mismatches 3`] = `
"Failure
--- (error returned to client) ---
EntNotInsertableError: table: cannot insert in vc:999, because:
  tenant_id is expected to be "999", but got undefined
--- (what actually happened) ---
"
`;

exports[`0130: fail when tenant user id mismatches 4`] = `
"Failure
--- (error returned to client) ---
EntNotUpdatableError: table:123 is not updatable/deletable in vc:999, because:
  tenant_id is expected to be "999", but got "42"
--- (what actually happened) ---
"
`;

exports[`0130: fail when tenant user id mismatches 5`] = `
"Failure
--- (error returned to client) ---
EntNotUpdatableError: table:123 is not updatable/deletable in vc:999, because:
  tenant_id is expected to be "999", but got "42"
--- (what actually happened) ---
"
`;

exports[`0140: load succeeds when some of Or predicates succeed 1`] = `
"OK
--- (what actually happened) ---
[First threw] EntNotReadableError: other_table:987 is not readable in vc:guest, because:
  ent access error
[Second returned] true"
`;

exports[`0150: load fails with nice error when all of Or predicates fail 1`] = `
"Failure
--- (error returned to client) ---
EntNotInsertableError: table: cannot insert in vc:guest:master, because:
  Rule Require:Or returned DENY, because:
    First: other_table:987 is not readable in vc:guest, because:
      { myKey: 'ent access error' }
    Second: false
--- (what actually happened) ---
[First threw] EntNotReadableError: other_table:987 is not readable in vc:guest, because:
  { myKey: 'ent access error' }
[Second returned] false"
`;

exports[`0160: load crashes when some predicates fail with a wild error 1`] = `
"Failure
--- (error returned to client) ---
Error: wild
--- (what actually happened) ---
[First threw] Error: wild
[Second returned] true"
`;
